<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simplified_robotics</name>
  <version>0.0.2</version>
  <description>UI Control Package for Simplified Robotics and Interbotix Robot Arms</description>
  <maintainer email="trent@iotdesignshop.com">Trent Shumay</maintainer>
  <license>MIT</license>

  <exec_depend>xclip</exec_depend>
  <exec_depend>python3-kivy2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
